# TCP-Chat-Rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: client.rs  lib.rs  main.rs  server.rs
src/commands/: mod.rs  registry.rs
src/commands/handlers/: mod.rs
src/config/: mod.rs
src/logging/: mod.rs
src/message_bus/: broadcaster.rs  mod.rs
src/networking/: listener.rs  mod.rs
src/protocol/: message.rs  mod.rs  parser.rs
src/security/: mod.rs  rate_limiter.rs  sanitizer.rs  validator.rs
src/session/: handler.rs  mod.rs  timeout.rs
src/state/: mod.rs
